# Tgops

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
api/: deps.py  main.py  schemas.py
api/routers/: account.py  admin.py  groups.py  invite.py  jobs.py  member.py
docs/: api.md  commands.md  commercial.md  configuration.md  faq.md  getting-started.md  index.md
tests/: conftest.py
tests/unit/: test_audit.py  test_config.py  test_migration.py  test_rate_limiter.py
tgops/: __init__.py  main.py
tgops/core/: __init__.py  audit.py  client.py  config.py  exceptions.py
tgops/models/: __init__.py  admin.py  group.py  member.py  migration.py
tgops/services/: __init__.py  account.py  admin.py  invite.py  member.py  migration.py
tgops/utils/: __init__.py  formatting.py  rate_limiter.py  webhook.py
